add generated workout plan and meals

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
-AZURE_OPENAI_API_KEY=your_api_key_here
-AZURE_OPENAI_API_BASE=your_api_base_here
-AZURE_OPENAI_API_VERSION=2023-05-15
+AZURE_OPENAI_API_KEY="ab1bc936d5434aa6b5c76ad5245de794"
+AZURE_OPENAI_API_BASE="https://learnfromengineering.openai.azure.com/"
+AZURE_OPENAI_API_VERSION="2023-09-15-preview"
+AZURE_OPENAI_DEPLOYMENT_NAME="DeploymentGPT35T"  # Updated to match Azure's standard deployment name
 
 MONGODB_URI=mongodb+srv://hedi:thenewiron2001@cluster0.dzjf9.mongodb.net/?retryWrites=true&w=majority
-PORT=3001
+PORT=3000
